--- a/Loginç/PerfilCliente.resx
+++ b/Loginç/PerfilCliente.resx
@@ -138,6 +138,9 @@
   <metadata name="factBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>390, 56</value>
   </metadata>
+  <metadata name="factBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>390, 56</value>
+  </metadata>
   <metadata name="_A_Beltran_CopiadoraDataSet12.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>164, 56</value>
   </metadata>
